# HelloCV

./: CMakeLists.txt  README.md  second week
include/: Crypto.h  FileHandler.h  Menu.h
src/: Crypto.cpp  FileHandler.cpp  Menu.cpp  main.cpp
